slurm-23.out
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/Hyperasexamplerun.py", line 85
    model.add(Dense({{range(1,10}})))
                                ^
SyntaxError: invalid syntax
